--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,20 @@
 .card{
   width: 180px;
   height: 180px;
+  background-color: blue;
+  border: solid 1px black;
+  box-sizing: border-box;
+}
+.card:hover{
+  cursor: pointer;
+  border: solid 2px white;
 }
 .img{
   width: 100%;
   height: 100%;
+}
+.notShow{
+  display: none;
 }
 .App-logo {
   height: 40vmin;
